# fastapi-allauth

./: pyproject.toml
src/allauth_fastapi/: __init__.py
