[project]
name = "allauth-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.33.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.19",
    "requests>=2.32.3",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
